--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     }
   },
   "require": {
-    "ramsey/uuid": "^3.8",
-    "mockery/mockery": "^1.1"
+    "ramsey/uuid": "^3.8"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "orchestra/testbench": "^3.5",
-    "spatie/phpunit-watcher": "^1.6"
+    "spatie/phpunit-watcher": "^1.6",
+    "mockery/mockery": "^1.1"
   },
   "extra": {
     "laravel": {
