--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
       "Vistik\\Apm\\": "src/"
     }
   },
-  "require": {
-    "ramsey/uuid": "^3.8"
-  },
+  "require": {},
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "orchestra/testbench": "^3.5",
