--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
       "Tests\\": "tests/"
     }
   },
-  "require": {},
+  "require": {
+    "phpsafari/typed-collections": "^2.0"
+  },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
     "orchestra/testbench": "^3.5",
