--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "test": "phpunit",
-    "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+    "check-style": "phpcs -p --standard=PSR2 src",
     "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
   },
   "extra": {
