--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,13 @@
     "phpunit/phpunit": "^6.5",
     "orchestra/testbench": "^3.5",
     "spatie/phpunit-watcher": "^1.6",
-    "mockery/mockery": "^1.1"
+    "mockery/mockery": "^1.1",
+    "squizlabs/php_codesniffer": "^3.3"
+  },
+  "scripts": {
+    "test": "phpunit",
+    "check-style": "phpcs -p --standard=PSR2 src",
+    "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
   },
   "extra": {
     "laravel": {
